# English_Shorts_Learning

./: .gitignore  README.md  example_burn_subtitles.py  example_free_llm_segment.py  example_segment_video.py  free_llm_segmenter.py  pyproject.toml  subtitle_burner.py  video_segmenter.py  vtt_to_srt_converter.py  vtt_to_text_converter.py  youtube_downloader.py
