[project]
name = "youtube-downloader"
version = "1.0.0"
description = "A simple YouTube video downloader using yt-dlp"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.12.30",
    "requests>=2.25.0",
]

[project.scripts]
yt-downloader = "yt_downloader:main"
subtitle-burner = "subtitle_burner:main"
video-segmenter = "video_segmenter:main"
free-llm-segmenter = "free_llm_segmenter:main"
vtt-to-srt = "vtt_to_srt_converter:main"
vtt-to-text = "vtt_to_text_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
